--- a/GoodPractices_Controller/GoodPractices_Controller.csproj
+++ b/GoodPractices_Controller/GoodPractices_Controller.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentController.cs" />
     <Compile Include="SubjectControler.cs" />
+    <Compile Include="TeacherController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
