--- a/GoodPractices_Controller/GoodPractices_Controller.csproj
+++ b/GoodPractices_Controller/GoodPractices_Controller.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CourseController.cs" />
+    <Compile Include="GradeController.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentController.cs" />
