Unit test of simple create delete operations

--- a/GoodPractices_Controller/GoodPractices_Controller.csproj
+++ b/GoodPractices_Controller/GoodPractices_Controller.csproj
@@ -54,7 +54,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentController.cs" />
-    <Compile Include="SubjectControler.cs" />
+    <Compile Include="SubjectController.cs" />
     <Compile Include="TeacherController.cs" />
   </ItemGroup>
   <ItemGroup>
