Refactor to delete repeated code

--- a/GoodPractices_Controller/GoodPractices_Controller.csproj
+++ b/GoodPractices_Controller/GoodPractices_Controller.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="GeneralFunctions.cs" />
     <Compile Include="CourseController.cs" />
     <Compile Include="GradeController.cs" />
     <Compile Include="Program.cs" />
