Almost all classes with S of Solid, Teacher missing

--- a/GoodPractices_Model/GoodPractices_Model.csproj
+++ b/GoodPractices_Model/GoodPractices_Model.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Course.cs" />
     <Compile Include="ForeignLanguage.cs" />
     <Compile Include="Grade.cs" />
+    <Compile Include="GradeReport.cs" />
     <Compile Include="GradeType.cs" />
     <Compile Include="Language.cs" />
     <Compile Include="Migrations\201808011929231_CreateClasses.cs" />
