--- a/GoodPractices_Controller/GoodPractices_Controller.csproj
+++ b/GoodPractices_Controller/GoodPractices_Controller.csproj
@@ -52,10 +52,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GeneralFunctions.cs" />
+    <Compile Include="AdministratorController.cs" />
+    <Compile Include="Validation.cs" />
     <Compile Include="CourseController.cs" />
     <Compile Include="GradeController.cs" />
-    <Compile Include="IGeneralFunctions.cs" />
+    <Compile Include="IValidation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StudentController.cs" />
