--- a/GoodPractices_Test/GoodPractices_Test.csproj
+++ b/GoodPractices_Test/GoodPractices_Test.csproj
@@ -78,6 +78,7 @@
     <Compile Include="StudentControllerTest.cs" />
     <Compile Include="SubjectControllerTest.cs" />
     <Compile Include="TeacherControllerTest.cs" />
+    <Compile Include="ValidationTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
