100% test coverage of the AdministratorController

--- a/GoodPractices_Test/GoodPractices_Test.csproj
+++ b/GoodPractices_Test/GoodPractices_Test.csproj
@@ -71,6 +71,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdministratorControllerTest.cs" />
     <Compile Include="CourseControllerTest.cs" />
     <Compile Include="GeneralMock.cs" />
     <Compile Include="GradeControllerTest.cs" />
