--- a/GoodPractices_Controller/packages.config
+++ b/GoodPractices_Controller/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="4.8.1" targetFramework="net461" />
+  <package id="Autofac.Web" version="4.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="FluentAssert" version="1.0.0.11" targetFramework="net461" />
 </packages>
