--- a/GoodPractices_ResponseModel/GoodPractices_ResponseModel.csproj
+++ b/GoodPractices_ResponseModel/GoodPractices_ResponseModel.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="ResponseCourse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ResponseMessage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
