Refactor on resolve of http status codes and dependency injection on the controllers

--- a/GoodPractices_Test/GoodPractices_Test.csproj
+++ b/GoodPractices_Test/GoodPractices_Test.csproj
@@ -86,7 +86,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\GoodPractices_Controller\GoodPractices_Engine.csproj">
+    <ProjectReference Include="..\GoodPractices_Engine\GoodPractices_Engine.csproj">
       <Project>{14726eca-635e-41ef-bc9c-1ff6e9e495f1}</Project>
       <Name>GoodPractices_Engine</Name>
     </ProjectReference>
